--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -1,171 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| hide\n",
-    "from gridstitcher.core import *"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# gridstitcher\n",
+    "# Welcome to gridstitcher\n",
     "\n",
-    "> Experimental package to automate stitching/registration of a regular grid of image tiles."
+    "> Yet another experimental package to automate stitching/registration of a regular grid of image tiles."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Developer Guide"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you are new to using `nbdev` here are some useful pointers to get you started."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Install gridstitcher in Development mode"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```sh\n",
-    "# make sure gridstitcher package is installed in development mode\n",
-    "$ pip install -e .\n",
+    "Some camera systems, such as infrared reflectography at 1600nm, inherently produce fairly low resolution images. To increase overall image resolution it is possible to photograph an object in parts in a regular grid of overlapping image tiles. This then leaves us with the task of stitching or registering those tiles into a composite image. Doing this manually with a photo editor is certainly possible. However for large amounts of images this becomes a time consuming and tedious job. \n",
     "\n",
-    "# make changes under nbs/ directory\n",
-    "# ...\n",
+    "In the recent Falnama project with Wereldmuseum and Klassik Stiftung Weimar we acquired 36 image tiles for 35 pages each. So we needed an automated stitching software.  After unsuccessful trials for our types of images with Photoshop and several existing Python packages our project team decided to try and develop our own open source Python package `gridstitcher`. \n",
     "\n",
-    "# compile to have changes apply to gridstitcher\n",
-    "$ nbdev_prepare\n",
-    "```"
+    "If you are interested you can install the package from the Python package soon. You can also study the github [source code](https://github.com/fligt/gridstitcher/tree/master) and the [documentation](https://fligt.github.io/gridstitcher/). \n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Usage"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Installation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Install latest from the GitHub [repository][repo]:\n",
-    "\n",
-    "```sh\n",
-    "$ pip install git+https://github.com/fligt/gridstitcher.git\n",
-    "```\n",
-    "\n",
-    "or from [conda][conda]\n",
-    "\n",
-    "```sh\n",
-    "$ conda install -c fligt gridstitcher\n",
-    "```\n",
-    "\n",
-    "or from [pypi][pypi]\n",
-    "\n",
-    "\n",
-    "```sh\n",
-    "$ pip install gridstitcher\n",
-    "```\n",
-    "\n",
-    "\n",
-    "[repo]: https://github.com/fligt/gridstitcher\n",
-    "[docs]: https://fligt.github.io/gridstitcher/\n",
-    "[pypi]: https://pypi.org/project/gridstitcher/\n",
-    "[conda]: https://anaconda.org/fligt/gridstitcher"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Documentation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Documentation can be found hosted on this GitHub [repository][repo]'s [pages][docs]. Additionally you can find package manager specific guidelines on [conda][conda] and [pypi][pypi] respectively.\n",
-    "\n",
-    "[repo]: https://github.com/fligt/gridstitcher\n",
-    "[docs]: https://fligt.github.io/gridstitcher/\n",
-    "[pypi]: https://pypi.org/project/gridstitcher/\n",
-    "[conda]: https://anaconda.org/fligt/gridstitcher"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## How to use"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Fill me in please! Don't forget code examples:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "1+1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
