fix dependencies in ini

--- a/notebooks/02_Automated-tile-grid-stitching-how-it-works.ipynb
+++ b/notebooks/02_Automated-tile-grid-stitching-how-it-works.ipynb
@@ -348,16 +348,14 @@
     "\n",
     "import numpy as np\n",
     "import cv2\n",
-    "from pathlib import Path\n",
-    "from glob import glob \n",
+    "from pathlib import Path \n",
     "import matplotlib.pyplot as plt\n",
     "import os \n",
     "import io \n",
     "import scipy.optimize as sop \n",
     "from functools import partial \n",
     "from matplotlib.patches import Rectangle\n",
-    "import imageio \n",
-    "import base64 "
+    "import imageio "
    ]
   },
   {
