--- a/notebooks/02_Automated-tile-grid-stitching-how-it-works.ipynb
+++ b/notebooks/02_Automated-tile-grid-stitching-how-it-works.ipynb
@@ -35,7 +35,9 @@
    "id": "9113568e-32ff-41f9-9fe5-94b3d50d2fdf",
    "metadata": {},
    "source": [
-    "*You can find a lot of tutorials how to do simple image stitching using two photos and that is no problem. But what to do when I want to make a panorama from 4-6 images or more?* This question posted on [stackoverflow](https://stackoverflow.com/questions/24563173/stitch-multiple-images-using-opencv-python), this [article](https://web.archive.org/web/20140115053733/http://cs.bath.ac.uk:80/brown/papers/ijcv2007.pdf) by Brown, make clear that robust automated stitching of multiple images presents a much harder problem. In case you are interested to learn how this works. Here follows a brief description of the consecutive steps of automated tile stitching algorithm. "
+    "*You can find a lot of tutorials how to do simple image stitching using two photos and that is no problem. But what to do when I want to make a panorama from 4-6 images or more?* \n",
+    "\n",
+    "This question posted on [stackoverflow](https://stackoverflow.com/questions/24563173/stitch-multiple-images-using-opencv-python), this [article](https://web.archive.org/web/20140115053733/http://cs.bath.ac.uk:80/brown/papers/ijcv2007.pdf), make clear that robust automated stitching of multiple images presents a much harder problem. In case you are interested to learn how this works. Here follows a brief description of the consecutive steps of automated tile stitching algorithm implemented in `gridstitcher`. "
    ]
   },
   {
@@ -43,7 +45,7 @@
    "id": "3dabd9b7-80d7-467e-9a72-3d4a3047ad9a",
    "metadata": {},
    "source": [
-    "To get started need to obtain a list of the tile image files. This is best done with the operating system independent `pathlib` standard package. Let's also import `matplotlib` to inspect the result below. "
+    "To get started you need to obtain a list of the tile image files. This is best done with the operating system independent standard package `pathlib`. Let's also already import `matplotlib` here to inspect the result below. "
    ]
   },
   {
@@ -78,24 +80,6 @@
     "tiles_dir = Path('/home/frank/Work/Werknummers/2024-811_Falnama/data/Weimar-IRR_1600nm/71803-02_IRR 1600 nm/') \n",
     "im_files = sorted(tiles_dir.glob('*.tif'))\n",
     "len(im_files) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "17b06f27-6e8e-42f6-912b-29e51243214e",
-   "metadata": {},
-   "source": [
-    "Let's activate interactive plotting in our Jupyter notebook with the notebook magic command. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a28b1db6-2fa6-4493-8e77-b333ef10a6e1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib widget"
    ]
   },
   {
